--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.2",
     "@types/redux": "^3.6.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "typescript": "^4.5.4",
