--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
